# api/src/main/java/com/nexblocks/authguard/api/routes/ApiKeysApi.java
@@ -3,7 +3,7 @@ package com.nexblocks.authguard.api.routes;
 import com.nexblocks.authguard.api.access.ActorRoles;
 import io.javalin.http.Context;
 
-import static io.javalin.apibuilder.ApiBuilder.post;
+import static io.javalin.apibuilder.ApiBuilder.*;
 
 public abstract class ApiKeysApi implements ApiRoute {
 
@@ -15,7 +15,13 @@ public abstract class ApiKeysApi implements ApiRoute {
     @Override
     public void addEndpoints() {
         post("/", this::generate, ActorRoles.anyAdmin());
+        get("/:id", this::getById, ActorRoles.adminClient());
+        delete("/:id", this::getById, ActorRoles.adminClient());
     }
 
     public abstract void generate(final Context context);
+
+    public abstract void getById(final Context context);
+
+    public abstract void deleteById(final Context context);
 }
